# dmz

./: .gitignore  CMakeLists.txt  README.md  TODO.md
dev/: build.sh  coverage.sh  local_build.sh
include/: AST.hpp  CFG.hpp  Codegen.hpp  Constexpr.hpp  DMZPCH.hpp  DMZPCHLLVM.hpp  DMZPCHSymbols.hpp  Debug.hpp  Driver.hpp  Lexer.hpp  PH.hpp  Parser.hpp  Profiler.hpp  Semantic.hpp  Stats.hpp  ThreadPool.hpp  Utils.hpp  debug.hpp
include/codegen/: Codegen.hpp
include/driver/: Driver.hpp
include/fmt/: Builder.hpp  Formatter.hpp  FormatterSymbols.hpp  Generator.hpp
include/lexer/: Lexer.hpp
include/linker/: Linker.hpp
include/lsp/: node_finder.hpp  protocol.hpp  semantic_tokens.hpp  server.hpp
include/parser/: Parser.hpp  ParserSymbols.hpp
include/semantic/: CFG.hpp  Constexpr.hpp  Semantic.hpp  SemanticSymbols.hpp  SemanticSymbolsTypes.hpp
include/test_runner/: test_runner.hpp
src/: AST.cpp  CFG.cpp  CMakeLists.txt  Codegen.cpp  Compiler.cpp  Constexpr.cpp  Driver.cpp  Lexer.cpp  Parser.cpp  Semantic.cpp  Semantic.cpp.old  c.cpp  main.cpp
src/codegen/: Codegen.cpp  CodegenDecl.cpp  CodegenExpr.cpp  CodegenStmt.cpp
src/driver/: Driver.cpp  DriverUtils.cpp
src/fmt/: Builder.cpp  Formatter.cpp  FormatterDecl.cpp  FormatterExpr.cpp  FormatterStmt.cpp  FormatterSymbols.cpp  Generator.cpp
src/lexer/: Lexer.cpp
src/linker/: Linker.cpp
src/lsp/: node_finder.cpp  protocol.cpp  semantic_tokens.cpp  server.cpp
src/parser/: Parser.cpp  ParserDecl.cpp  ParserExpr.cpp  ParserStmt.cpp  ParserSymbols.cpp
src/semantic/: CFG.cpp  Constexpr.cpp  Semantic.cpp  SemanticDecl.cpp  SemanticExpr.cpp  SemanticStmt.cpp  SemanticSymbols.cpp  SemanticSymbolsTypes.cpp
src/test_runner/: test_runner.cpp
std/: algorithm.dmz  buildin.dmz  builtin.dmz  errno.dmz  hash.dmz  hashmap.dmz  list.dmz  mem.dmz  random.dmz  std.dmz  string.dmz  testing.dmz  time.dmz  types.dmz  vector.dmz
std/io/: file.dmz  fmt.dmz  io.dmz  print.dmz  reader.dmz  scan.dmz  writer.dmz
test/: .gitignore  CMakeLists.txt  lit.cfg.py
test/cfg/: arguments.dmz  assignment.dmz  assignment_lhs.dmz  condition.dmz  empty_fn.dmz  if_statement.dmz  member_access.dmz  return.dmz  return_in_cond.dmz  struct_instantiation.dmz  switch.dmz  while.dmz
test/codegen/: alloca_order.dmz  array.dmz  assignment_operand_order.dmz  break_continue.dmz  catch_new_syntax.dmz  cond_binop_side_effect.dmz  condition_empty_merge.dmz  constexpr.dmz  error_handle.dmz  error_handle_inplace.dmz  expressions.dmz  extern_functions.dmz  for.dmz  for_slice.dmz  for_slice_nested.dmz  generic_func.dmz  generic_inference.dmz  generic_struct.dmz  generic_struct_method.dmz  global_var.dmz  if_conditional_binop_condition.dmz  immutable_parameters.dmz  inline_for.dmz  lambda.dmz  lambda_no_capture.dmz  lazy_init_variable.dmz  main_wrapper.dmz  member_initialization_order.dmz  methods.dmz  module_ops.dmz  module_ops_usage.dmz  module_setup.dmz  module_std.dmz  multiple_return.dmz  multiple_return_if.dmz  multiple_return_while.dmz  null.dmz  ops.dmz  orelse.dmz  parameter_mutability.dmz  (+29 more)
test/constexpr/: args.dmz  grouping.dmz  ops.dmz  special_cases.dmz  vars.dmz
test/debugSymbols/: alloca_order.dmz  hello_world.dmz
test/driver/: help.dmz  (+8 more)
(+214 files in other folders)
